# arrow-datafusion

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: python_build.yml  python_test.yaml  rust.yml
ballista/rust/client/: Cargo.toml
ballista/rust/client/src/: context.rs
ballista/rust/core/: Cargo.toml
ballista/rust/core/proto/: ballista.proto
ballista/rust/core/src/serde/logical_plan/: mod.rs
ballista/rust/executor/: Cargo.toml
ballista/rust/scheduler/src/: planner.rs
benchmarks/: README.md  run.sh  tpch-gen.sh
ci/docker/: linux-apt-lint.dockerfile
datafusion/: Cargo.toml
datafusion-cli/: Cargo.toml  README.md
datafusion-examples/: Cargo.toml
datafusion-examples/examples/: dataframe_in_memory.rs  flight_server.rs  simple_udaf.rs  simple_udf.rs
datafusion/common/: Cargo.toml
datafusion/common/src/: dfschema.rs  error.rs  lib.rs  outer_query_cursor.rs  scalar.rs
datafusion/core/: Cargo.toml
datafusion/core/fuzz-utils/: Cargo.toml
datafusion/core/src/: dataframe.rs  lib.rs  scalar.rs  test_util.rs
datafusion/core/src/datasource/: datasource.rs  empty.rs  memory.rs  mod.rs
datafusion/core/src/datasource/listing/: helpers.rs  table.rs
datafusion/core/src/execution/: context.rs  memory_manager.rs
datafusion/core/src/logical_plan/: builder.rs  expr.rs  expr_rewriter.rs  expr_schema.rs  expr_visitor.rs  mod.rs  plan.rs
datafusion/core/src/optimizer/: common_subexpr_eliminate.rs  eliminate_filter.rs  eliminate_limit.rs  filter_push_down.rs  limit_push_down.rs  mod.rs  projection_drop_out.rs  projection_push_down.rs  simplify_expressions.rs  single_distinct_to_groupby.rs  utils.rs
datafusion/core/src/physical_optimizer/: aggregate_statistics.rs  hash_build_probe_order.rs  pruning.rs  repartition.rs
datafusion/core/src/physical_plan/: aggregates.rs  common.rs  cube_subquery.rs  empty.rs  functions.rs  hash_aggregate.rs  hash_join.rs  hash_utils.rs  join_utils.rs  limit.rs  memory.rs  mod.rs  planner.rs  projection.rs  repartition.rs  subquery.rs  table_fun.rs  type_coercion.rs  union.rs  window_functions.rs
datafusion/core/src/physical_plan/file_format/: csv.rs  json.rs  parquet.rs
datafusion/core/src/physical_plan/metrics/: value.rs
datafusion/core/src/physical_plan/sorts/: mod.rs  sort.rs  sort_preserving_merge.rs
datafusion/core/src/physical_plan/windows/: mod.rs
datafusion/core/src/row/: writer.rs
datafusion/core/src/sql/: parser.rs  planner.rs  utils.rs
datafusion/core/src/test/: mod.rs
datafusion/core/tests/: custom_sources.rs  dataframe.rs  dataframe_functions.rs  parquet_pruning.rs  path_partition.rs  provider_filter_pushdown.rs  statistics.rs  tpcds_planning.rs  user_defined_plan.rs
datafusion/core/tests/sql/: aggregates.rs  errors.rs  explain_analyze.rs  expr.rs  functions.rs  information_schema.rs  joins.rs  json.rs  mod.rs  order.rs  parquet.rs  predicates.rs  projection.rs  select.rs  subqueries.rs  subquery.rs  timestamp.rs  udf.rs
datafusion/core/tests/sqllogictests/test_files/: tpch.slt
datafusion/cube_ext/: Cargo.toml  README.md
datafusion/cube_ext/src/: lib.rs  nullif_str.rs  temporal.rs
datafusion/expr/: Cargo.toml
datafusion/expr/src/: aggregate_function.rs  binary_rule.rs  built_in_function.rs  expr.rs  expr_fn.rs  expr_rewriter.rs  expr_schema.rs  expr_visitor.rs  function.rs  lib.rs  operator.rs  type_coercion.rs  udtf.rs  utils.rs  window_function.rs
datafusion/expr/src/logical_plan/: builder.rs  mod.rs  plan.rs
datafusion/jit/: Cargo.toml
datafusion/jit/src/: api.rs
datafusion/optimizer/src/: common_subexpr_eliminate.rs  push_down_projection.rs
datafusion/optimizer/src/simplify_expressions/: expr_simplifier.rs
datafusion/optimizer/tests/: integration-test.rs
datafusion/physical-expr/: Cargo.toml
datafusion/physical-expr/src/: conditional_expressions.rs  datetime_expressions.rs  execution_props.rs  field_util.rs  lib.rs  math_expressions.rs  physical_expr.rs  planner.rs  regex_expressions.rs  unicode_expressions.rs
datafusion/physical-expr/src/coercion_rule/: aggregate_rule.rs  binary_rule.rs
datafusion/physical-expr/src/expressions/: any.rs  approx_percentile_cont.rs  average.rs  binary.rs  binary_distinct.rs  bool_and_or.rs  case.rs  count.rs  covariance.rs  distinct_expressions.rs  get_indexed_field.rs  in_list.rs  mod.rs  negative.rs  nullif.rs  outer_column.rs  percentile_cont.rs  stddev.rs  sum.rs
datafusion/physical-expr/src/tdigest/: mod.rs
datafusion/proto/proto/: datafusion.proto
datafusion/proto/src/: from_proto.rs  lib.rs  to_proto.rs
datafusion/proto/src/logical_plan/: mod.rs  to_proto.rs
datafusion/sql/src/: planner.rs  select.rs  utils.rs
datafusion/sql/src/expr/: identifier.rs  mod.rs  subquery.rs
datafusion/sql/tests/: integration_test.rs
datafusion/src/: error.rs  scalar.rs
datafusion/src/cube_ext/: alias.rs  catch_unwind.rs  sequence.rs  spawn.rs  util.rs
datafusion/src/datasource/: csv.rs  datasource.rs  empty.rs  json.rs  memory.rs  parquet.rs
datafusion/src/execution/: context.rs
datafusion/src/logical_plan/: builder.rs  dfschema.rs  window_frames.rs
datafusion/src/optimizer/: aggregate_statistics.rs  filter_push_down.rs  hash_build_probe_order.rs
datafusion/src/physical_optimizer/: pruning.rs  repartition.rs
datafusion/src/physical_plan/: coalesce_batches.rs  coalesce_partitions.rs  common.rs  datetime_expressions.rs  filter.rs  functions.rs  hash_aggregate.rs  limit.rs  memory.rs  merge.rs  merge_sort.rs  mod.rs  parquet.rs  planner.rs  projection.rs  skip.rs  sort.rs  sorted_aggregate.rs  unicode_expressions.rs  union.rs
datafusion/src/physical_plan/expressions/: binary.rs  case.rs  coercion.rs
datafusion/src/sql/: planner.rs  utils.rs
datafusion/tests/: custom_sources.rs  provider_filter_pushdown.rs  sql.rs
dev/: update_arrow_deps.py
dev/release/: README.md  update_change_log-all.sh  update_change_log-datafusion.sh
docs/source/: index.rst
docs/source/cli/: index.rst
docs/source/user-guide/: cli.md  faq.md
python/src/: errors.rs
